kube/ckad/netpol/deny-all-incoming.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-incoming
  namespace: np
spec:
  podSelector:
    matchLabels:
      api: web
  policyTypes:
  - Ingress
  ingress: []
